--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,7 @@ include_directories(
     external/glew-1.13.0/include/
     external/assimp-3.0.1270/include/
     external/bullet-2.81-rev2613/src/
-	b_tree/b_tree/include/
+	b_tree/eda_b_tree/include/
     include/
 	resources/
     .
